--- a/web/package.json
+++ b/web/package.json
@@ -10,9 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
+    "@types/axios": "^0.14.0",
+    "axios": "^1.4.0",
+    "chart.js": "^4.3.2",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
