--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.4.5",
+    "@types/nodemailer": "^6.4.9",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
@@ -24,6 +25,9 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.1",
+    "node-cron": "^3.0.2",
+    "node-html-parser": "^6.1.5",
+    "nodemailer": "^6.9.4",
     "typescript": "^5.1.6"
   }
 }
