--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.4.5",
+    "@types/node-cron": "^3.0.8",
     "@types/nodemailer": "^6.4.9",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
