--- a/server/package.json
+++ b/server/package.json
@@ -9,15 +9,6 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "@types/axios": "^0.14.0",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/cookie-parser": "^1.4.3",
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
-    "@types/jsonwebtoken": "^9.0.2",
-    "@types/node": "^20.4.5",
-    "@types/node-cron": "^3.0.8",
-    "@types/nodemailer": "^6.4.9",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
@@ -30,5 +21,16 @@
     "node-html-parser": "^6.1.5",
     "nodemailer": "^6.9.4",
     "typescript": "^5.1.6"
+  },
+  "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/node": "^20.4.5",
+    "@types/node-cron": "^3.0.8",
+    "@types/nodemailer": "^6.4.9"
   }
 }
